syntax = "proto3";

package user;

service UserService{
    rpc CreateUser(User) returns (User);
    rpc GetUserById(GetId) returns(User);
    rpc UpdateUser(User) returns (User);
    rpc DeleteUser(GetId) returns (Empty);
}

message Empty{}

message User {
    int64 Id = 1;
    string Name = 2;
    string LastName =3;
}

message GetId {
    int64 id =1;
}